--- a/css/main.css
+++ b/css/main.css
@@ -42,3 +42,8 @@ nav .nav-right-section .menu-icon{
     width: 25px;
     height:25px;
 }
+
+nav .nav-right-section img {
+    border-radius: 50%;
+    margin-left: 10px;
+}
