--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body{
     font-size: 13px;
     font-family: Arial, Helvetica, sans-serif;
 }
-
+/* nav */
 a{
     text-decoration: none;
     cursor: pointer;
@@ -46,4 +46,19 @@ nav .nav-right-section .menu-icon{
 nav .nav-right-section img {
     border-radius: 50%;
     margin-left: 10px;
+}
+
+/* main */
+
+main{
+    margin-top: 150px;
+    text-align: center;
+}
+main .main-logo{
+    width:530px;
+    margin: 0 auto;
+    margin-bottom: 35px;
+}
+main .main-logo img {
+    
 }
