Logo google style

--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,6 @@ main .main-logo{
     margin: 0 auto;
     margin-bottom: 35px;
 }
-main .main-logo img {
-    
+main .main-logo img{
+    width: 300px;
 }
