--- a/css/main.css
+++ b/css/main.css
@@ -54,11 +54,13 @@ main{
     margin-top: 150px;
     text-align: center;
 }
+
 main .main-logo{
     width:530px;
     margin: 0 auto;
     margin-bottom: 35px;
 }
+
 main .main-logo img{
     width: 300px;
 }
@@ -68,6 +70,7 @@ main .main-input{
     margin: 0 auto;
     margin-bottom: 35px;
 }
+
 main .main-input-container{
     width: 525px;
     border-radius: 100px;
@@ -82,4 +85,8 @@ main .main-input input{
     height: 40px;
     border: none;
     outline: none;
+}
+main .main-input-container:hover{
+    box-shadow: 0 1px 6px #20212447;
+    border-color: #dfe1e500;
 }
