Changes icon input search and micro

--- a/css/main.css
+++ b/css/main.css
@@ -9,17 +9,14 @@ a{
     text-decoration: none;
     cursor: pointer;
 }
-
 header{
     width: 100%;
     height: 60px;
 }
-
 header nav{
     display: flex;
     justify-content: flex-end;
 }
-
 header nav .nav-right-section{
     width: 250px;
     height:auto;
@@ -28,12 +25,10 @@ header nav .nav-right-section{
     justify-content: center;
     align-items: center;
 }
-
 nav .nav-right-section a {
     margin-right: 10px;
     color: #000;
 }
-
 nav .nav-right-section .menu-icon{
     background-image: url('https://static.thenounproject.com/png/756729-200.png');
     background-repeat: no-repeat;
@@ -42,7 +37,6 @@ nav .nav-right-section .menu-icon{
     width: 25px;
     height:25px;
 }
-
 nav .nav-right-section img {
     border-radius: 50%;
     margin-left: 10px;
@@ -54,23 +48,19 @@ main{
     margin-top: 150px;
     text-align: center;
 }
-
 main .main-logo{
     width:530px;
     margin: 0 auto;
     margin-bottom: 35px;
 }
-
 main .main-logo img{
     width: 300px;
 }
-
 main .main-input{
     width:530px;
     margin: 0 auto;
     margin-bottom: 35px;
 }
-
 main .main-input-container{
     width: 525px;
     border-radius: 100px;
@@ -79,7 +69,6 @@ main .main-input-container{
     justify-content: center;
     align-items: center;
 }
-
 main .main-input input{
     width:450px;
     height: 40px;
@@ -89,4 +78,22 @@ main .main-input input{
 main .main-input-container:hover{
     box-shadow: 0 1px 6px #20212447;
     border-color: #dfe1e500;
+}
+
+main .main-input .search-icon{
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Vector_search_icon.svg/945px-Vector_search_icon.svg.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width:18px;
+    height:18px;
+}
+main .main-input .micro-icon{
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Google_mic.svg/716px-Google_mic.svg.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width:18px;
+    height:18px;
+    cursor: pointer;
 }
