--- a/css/main.css
+++ b/css/main.css
@@ -97,3 +97,27 @@ main .main-input .micro-icon{
     height:18px;
     cursor: pointer;
 }
+main .main-buttons{
+    width:530px;
+    margin: 0 auto;
+}
+main .main-buttons div{
+    display: inline-block;
+}
+main .main-buttons button{
+    height: 36px;
+    background-color: #f2f2f2;
+    border: 1px solid transparent;
+    font-size: 14px;
+    color: #5f6368;
+    border-radius: 5px;
+    padding: 0 15px;
+    margin: 11px 4px;
+}
+main .main-buttons button:hover{
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    background-image: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
+    background-color: #f8f8f8;
+    border: 1px solid #c6c6c6;
+    color: #222;
+}
