--- a/css/main.css
+++ b/css/main.css
@@ -121,3 +121,13 @@ main .main-buttons button:hover{
     border: 1px solid #c6c6c6;
     color: #222;
 }
+/* footer */
+
+footer{
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
