--- a/css/main.css
+++ b/css/main.css
@@ -130,4 +130,28 @@ footer{
     bottom: 0;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    align-items: center;
+    font-size: 14px;
+    background-color: #f2f2f2;
+    border-top: 1px solid #e4e4e4;
+}
+footer ul{
+    margin: 10px;
+    list-style: none;
+    display: flex;
+    padding-left: 0;
+}
+footer .footer-left{
+    justify-content: flex-start;
+}
+footer .footer-right{
+    justify-content: flex-end;
+}
+footer ul li a{
+    text-decoration: none;
+    margin: 15px;
+    color:#5f6368;
+}
+footer ul li a:hover{
+    text-decoration: underline;
 }
